# usb251xb

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  memory.x
.github/workflows/: ci.yaml  publish.yaml
src/: config.rs  device.rs  device_async.rs  error.rs  lib.rs  register.rs  smbus.rs
tests/: on_target.rs
