[package]
name = "usb251xb"
version = "0.0.1"
edition = "2024"
description = "no_std embedded-hal driver for Microchip USB251xB/xBi USB 2.0 hub controllers"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = { version = "1.0", optional = true }
modular-bitfield = "0.13"
thiserror = { version = "2", default-features = false }

[features]
default = []
async = ["dep:embedded-hal-async"]
